tests/suite/fail/generated/types/fail_mod_f64_string.ny
fn main() {
    let _ = 1.0 % "a" //~ ERROR Type mismatch in arithmetic
}
